<?xml version="1.0" encoding="utf-8"?>


<resources>
	<string name="app_name">Calendar</string>
	<string name="app_korname">Calendar</string>
	<string name="main_title">Calendar</string>
	<string name="about_label">About</string>
	<string name="exit_label">Exit</string>
	<string name="add_schedule">Add schedule.</string>

	<string name="schedule_date">● Date </string>
	<string name="schedule_title">● Title </string>
	<string name="schedule_contents">● Contents </string>
	<string name="schedule_repeat">Repeat alarm settings</string>
	<string name="schedule_repeatvalue">●</string>

	<string name="schedule_date_viewer">● Date : </string>
	<string name="schedule_title_viewer">● Title : </string>
	<string name="schedule_contents_viewer">● Contents : </string>
	<string name="schedule_repeat_viewer">● Alarm : </string>
	<string name="schedule_repeatvalue_viewer">● </string>

	<string name="dday_displayyn_viewer">● D-day : </string>

	<string name="schedule_dayname_viewer">Day</string>
	<string name="schedule_dayname2_viewer">Every days</string>
	<string name="dday_info_label">D-day </string>
	<string name="dday_fromto_label">From days </string>

	<string name="alarm_service_started">Alarm Start</string>
	<string name="activity_alarm_service">Alarm Service</string>
	<string name="alarm_service">Alarm Service</string>
	<string name="start_alarm_service">Start</string>
	<string name="stop_alarm_service">Stop</string>
	<string name="alarm_service_label">Alarm Notification.</string>
	<string name="alarm_service_finished">Alarm Service Cancel</string>

	<string name="every_day_label">Daily</string>
	<string name="every_week_label">Weekly</string>
	<string name="every_month_label">Monthly</string>
	<string name="every_year_label">Annually</string>
	<string name="gregorian">Gregorian</string>
	<string name="lunar">Lunar</string>
	<string name="alarm_none">No alarm</string>
	<string name="schedule_anniversary_label">Anniversary</string>

	<string name="schedule_holiday_label">Holiday</string>


	<string name="alarm_title">Alarm setting</string>
	<string name="alarm_summary">Do you want to identify and display the alarm set?
	</string>

	<string name="animation_title">Animation setting</string>
	<string name="animation_summary">Do you want to change animation?
	</string>

	<string name="anniversary_title">Anniversary</string>
	<string name="anniversary_summary">Schedule shall include in the list of
		anniversaries?</string>

	<string name="anniversary_label">Anniversary</string>


	<string name="btn_repeatalarm">Remind later</string>
	<string name="btn_stopalarm">Stop notify</string>
	<string name="btn_ok">Ok</string>
	<string name="btn_editalarm">Moditty</string>
	<string name="work_cancel_label">Cancel</string>

	<string name="specialday_title">Title</string>
	<string name="specialday_alarmyn">D-day Setting</string>
	<string name="specialday_date">Date</string>
	<string name="specialday_add_label">D-day Setting</string>
	<string name="specialday_displayyn">D-day Display</string>
	<string name="specialday_modify_label">D-day Modify</string>
	<string name="specialday_displayposigion">Display location</string>
	<string name="specialday_ddayvalue">Calculation</string>

	<string name="schedule_modify_action">Edit Schedule.</string>
	<string name="schedule_add_label">Add schedule.</string>
	<string name="check_lunar_label">Lunar</string>
	<string name="check_anniversary_label">Anniversary</string>
	<string name="schedule_delete_label">Delete schedule.</string>
	<string name="schedule_modify_label">Edit Schedule.</string>
	<string name="schedule_viewer_label">View the schedule.</string>

	<string name="schedule_list_label">Agenda</string>
	<string name="schedule_alllist_label">Full Agenda</string>
	<string name="schedule_todaylist_label">Today schedule</string>
	<string name="schedule_weeklist_label">Weekly schedule</string>
	<string name="schedule_monthlist_label">Month Schedule</string>


	<string name="schedule_gcaladdevent_label">Add event to Google Calendar</string>
	<string name="schedule_gcalimport_label">Import your G-Calendar Events</string>
	<string name="schedule_gcalimport_menu">Import G-Calendar</string>




	<string name="settings_label">Settings...</string>
	<string name="settings_title">Settings</string>
	<string name="settings_shortcut">s</string>
	<string name="lunaicon_title">Lunar icon</string>
	<string name="lunaicon_summary">Lunar icon should appear?</string>
	<string name="lunadays_title">Lunar date display.</string>
	<string name="lunadays_summary">At intervals of five days of the lunar dates should
		appear?</string>

	<string name="empty_str"></string>
	<string name="year_label">. </string>
	<string name="month_label">. </string>
	<string name="day_label"></string>
	<string name="calendar_title">Calendar</string>

	<string name="backup_label">Backup</string>
	<string name="restore_label">Restore</string>

	<string name="about_title">Lunar Scheduler</string>
	<string name="about_text">
		\
		Lunar Scheduler\n 1. Lunar Calendar\n 2.
		Scheduler\n 3. Alarm\n \n jeongjaehong@gmail.com \n Twitter: @nilriri2
		\n http://nilriri.blogspot.com/ \t\t\n 2010.04.02\n	
	</string>
	<string name="widget_label_1x1">D-day Widget(1x1)</string>
	<string name="widget_label_2x2">D-day Widget(2x2)</string>
	<string name="widget_label_4x4">Calendar Widget(4x4)</string>

	<string name="sdcarduse">External storage</string>
	<string name="sdcarduse_summary">Do you want the data stored on an external storage
		device?</string>
	<string name="sdcarduse_notinstall">No external storage devices available</string>

	<string name="title_list_preference">Widget Color</string>	
	<string name="summary_list_preference">Widget Color</string>
	<string name="dialog_title_list_preference">Widget Color</string>

</resources>
