<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:scrollbars="vertical">

	<LinearLayout android:id="@+id/layout"
		android:paddingLeft="5dip" android:paddingRight="5dip"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content">


		<TextView android:id="@+id/schedule_date_label"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/schedule_date" />
		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:padding="5sp" android:layout_gravity="right">
			<EditText android:id="@+id/schedule_date" android:editable="false"
				android:layout_below="@id/schedule_date_label" android:layout_width="wrap_content"

				android:layout_height="wrap_content" android:keepScreenOn="false" />
			<TextView android:id="@+id/schedule_ldate_label"
				android:gravity="center" android:padding="5sp" android:layout_width="wrap_content"
				android:layout_height="45dip" android:text="@string/check_lunar_label"
				android:layout_toRightOf="@id/schedule_date" />
			<EditText android:id="@+id/schedule_ldate" android:editable="false"
				android:layout_below="@id/schedule_date_label" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_toRightOf="@id/schedule_ldate_label"
				android:inputType="number" />
		</RelativeLayout>
		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:padding="5sp" android:gravity="right">

			<CheckBox android:id="@+id/check_lunar"
				android:layout_height="wrap_content" android:layout_width="wrap_content" />
			<TextView android:id="@+id/check_lunar_label"
				android:gravity="center" android:padding="5sp" android:layout_width="wrap_content"
				android:layout_height="45dip" android:text="@string/check_lunar_label"
				android:layout_toRightOf="@id/check_lunar" />

			<CheckBox android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:id="@+id/check_anniversary"
				android:layout_toRightOf="@id/check_lunar_label" />
			<TextView android:id="@+id/check_anniversary_label"
				android:gravity="center" android:padding="5sp" android:layout_width="wrap_content"
				android:layout_height="45dip" android:text="@string/check_anniversary_label"
				android:layout_toRightOf="@id/check_anniversary" />

		</RelativeLayout>

		<TextView android:layout_width="wrap_content"
			android:selectAllOnFocus="true" android:layout_height="wrap_content"
			android:text="@string/schedule_title" />
		<EditText android:id="@+id/schedule_title"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:singleLine="true" android:inputType="text" />


		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/schedule_contents" />
		<EditText android:id="@+id/schedule_contents"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:inputType="textMultiLine" />


		<!-- 반복알람설정 -->
		<TextView android:id="@+id/schedule_repeat_label"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/schedule_repeat" android:textSize="20sp"
			android:textColor="@color/orange" />
		<Spinner android:id="@+id/schedule_repeat"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />


		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/alarm_settings" android:layout_width="fill_parent"
			android:layout_height="wrap_content">


			<TextView android:id="@+id/schedule_repeatvalue"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/schedule_repeatvalue" android:gravity="center_vertical" />
			<Spinner android:id="@+id/alarm_lunasolar"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:gravity="center" android:visibility="gone"
				android:layout_toRightOf="@id/schedule_repeatvalue" />
			<EditText android:id="@+id/alarm_date" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:lines="1"
				android:singleLine="true" android:maxLength="10" android:gravity="center"
				android:editable="true" android:visibility="gone"
				android:layout_toRightOf="@id/alarm_lunasolar" android:inputType="number" />
			<Spinner android:id="@+id/alarm_days" android:layout_width="wrap_content"
				android:gravity="center" android:layout_height="wrap_content"
				android:visibility="gone" android:layout_toRightOf="@id/alarm_date" />
			<Spinner android:id="@+id/luna_alarm_day"
				android:layout_width="wrap_content" android:gravity="center"
				android:layout_height="wrap_content" android:visibility="gone"
				android:layout_toRightOf="@id/alarm_days" />
			<EditText android:id="@+id/alarm_day" android:layout_width="60dip"
				android:gravity="center" android:layout_height="wrap_content"
				android:singleLine="true" android:editable="false"
				android:visibility="gone" android:layout_toRightOf="@id/luna_alarm_day"
				android:inputType="number" />
			<EditText android:id="@+id/alarm_repeatday"
				android:layout_width="100dip" android:gravity="right"
				android:layout_height="wrap_content" android:singleLine="true"
				android:editable="true" android:visibility="gone"
				android:layout_toRightOf="@id/alarm_day" android:inputType="number" />
			<EditText android:id="@+id/alarm_time" android:layout_width="100dip"
				android:gravity="center" android:layout_height="wrap_content"
				android:lines="1" android:editable="false" android:visibility="gone"
				android:layout_toRightOf="@id/alarm_repeatday" android:inputType="number" />
		</RelativeLayout>


		<!-- D-day 설정 -->
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/specialday_alarmyn"
			android:textSize="20sp" android:textColor="@color/orange" />
		<Spinner android:id="@+id/specialday_alarmyn"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />


		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/dday_settings" android:layout_width="fill_parent"
			android:visibility="gone" android:layout_height="wrap_content">

			<TextView android:id="@+id/specialday_ddayvalue"
				android:paddingRight="4dip" android:layout_width="wrap_content"
				android:layout_height="fill_parent" android:text="@string/specialday_ddayvalue"
				android:gravity="center_vertical" />
			<EditText android:id="@+id/specialday_alarmday"
				android:layout_width="90dip" android:layout_height="wrap_content"
				android:selectAllOnFocus="true" android:singleLine="true"
				android:maxLength="3" android:gravity="right" android:text="0"
				android:editable="true" android:layout_toRightOf="@id/specialday_ddayvalue"
				android:inputType="number" />
			<Spinner android:id="@+id/specialday_sign"
				android:layout_width="wrap_content" android:gravity="center"
				android:layout_height="wrap_content" android:layout_toRightOf="@id/specialday_alarmday" />


			<TextView android:id="@+id/specialday_displayposition"
				android:paddingRight="4dip" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/specialday_displayposigion"
				android:layout_below="@id/specialday_alarmday" />
			<Spinner android:id="@+id/specialday_displayyn"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_toRightOf="@id/specialday_displayposition"
				android:layout_below="@id/specialday_alarmday" />
		</RelativeLayout>

	</LinearLayout>
</ScrollView>				